--- a/detalle_item.html
+++ b/detalle_item.html
@@ -156,7 +156,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                 </div>
                 <div class="modal-body">
-                    La funcionalidad de carrito estará disponible pronto.
+                    La funcionalidad estará disponible pronto.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal">Cerrar</button>
@@ -168,7 +168,9 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/productos.js"></script>
+        <!-- Cargar Lista de Productos -->
+        <script src="js/data_productos.js"></script>
+        <!-- <script src="js/productos.js"></script> -->
         <script src="js/detalle_item.js"></script>
     </body>
 </html>
