--- a/devoluciones.html
+++ b/devoluciones.html
@@ -157,7 +157,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                 </div>
                 <div class="modal-body">
-                    La funcionalidad de carrito estará disponible pronto.
+                    La funcionalidad estará disponible pronto.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal">Cerrar</button>
