--- a/productos.html
+++ b/productos.html
@@ -157,7 +157,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                 </div>
                 <div class="modal-body">
-                    La funcionalidad de carrito estará disponible pronto.
+                    La funcionalidad estará disponible pronto.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal">Cerrar</button>
@@ -168,6 +168,8 @@
 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Cargar Lista de Productos -->
+        <script src="js/data_productos.js"></script>
         <!-- Cargar filtro productos -->
         <script src="js/productos.js"></script>
 
